# meson-fs-dep-test

./: README.md  main.cc  meson.build
.github/workflows/: test.yml
